--- a/src/components/Sidebar/Author/Author.module.scss
+++ b/src/components/Sidebar/Author/Author.module.scss
@@ -28,7 +28,7 @@
   }
 
   &__subtitle {
-    color: $color-gray;
+    color: $color-secondary;
     @include line-height(1);
     @include margin-bottom(1)
   }
